--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-linking": "~8.0.11",
+    "expo-localization": "~17.0.8",
     "expo-media-library": "~18.2.1",
     "expo-router": "~6.0.22",
     "expo-sharing": "~14.0.8",
@@ -38,9 +39,11 @@
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
+    "i18next": "^25.8.0",
     "moment": "^2.30.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-i18next": "^16.5.4",
     "react-native": "0.81.5",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.28.0",
